@@ -2,6 +2,7 @@ CHANGELOG Roundcube Webmail
 ===========================
 
 - Password: Fix compatibility with PHP 7+ in cpanel_webmail driver (#5820)
+- Fix decoding non-ascii attachment names from TNEF attachments (#5646, #5799)
 
 RELEASE 1.3.0
 -------------
